@@ -1,3 +1,9 @@
+2014-09-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/61465
+	* call.c (convert_like_real) [ck_identity]: Call mark_rvalue_use
+	after pulling out an element from a CONSTRUCTOR.
+
 2014-09-18  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/63248
